--- a/glade/app1.glade
+++ b/glade/app1.glade
@@ -2351,7 +2351,7 @@ Carles</property>
                                                             <property name="can_focus">True</property>
                                                             <property name="receives_default">True</property>
                                                             <property name="has_tooltip">True</property>
-                                                            <property name="tooltip" translatable="yes">show all tests of this person</property>
+                                                            <property name="tooltip" translatable="yes">Show all tests of this person</property>
                                                             <signal name="clicked" handler="on_show_all_person_events_activate" swapped="no"/>
                                                             <child>
                                                             <widget class="GtkImage" id="image1188">
