--- a/glade/encoder_configuration.glade
+++ b/glade/encoder_configuration.glade
@@ -1330,12 +1330,18 @@ Eg. value = 2, means person does twice force at half speed.</property>
                               </packing>
                             </child>
                             <child>
-                              <widget class="GtkButton" id="button_duplicate">
-                                <property name="label" translatable="yes">Duplicate</property>
+                              <widget class="GtkButton" id="button_new">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">True</property>
-                                <signal name="clicked" handler="on_button_duplicate_clicked" swapped="no"/>
+                                <signal name="clicked" handler="on_button_new_clicked" swapped="no"/>
+                                <child>
+                                  <widget class="GtkImage" id="image_new">
+                                    <property name="visible">True</property>
+                                    <property name="can_focus">False</property>
+                                    <property name="stock">gtk-new</property>
+                                  </widget>
+                                </child>
                               </widget>
                               <packing>
                                 <property name="expand">False</property>
