--- a/glade/encoder_configuration.glade
+++ b/glade/encoder_configuration.glade
@@ -5,7 +5,7 @@
   <widget class="GtkWindow" id="encoder_configuration">
     <property name="can_focus">False</property>
     <property name="border_width">12</property>
-    <property name="title" translatable="yes">Select encoder</property>
+    <property name="title" translatable="yes">Select encoder configuration</property>
     <property name="modal">True</property>
     <property name="type_hint">dialog</property>
     <signal name="delete_event" handler="on_delete_event" swapped="no"/>
@@ -1175,7 +1175,7 @@ Eg. value = 2, means person does twice force at half speed.</property>
                               <widget class="GtkImage" id="image_import">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
-                                <property name="stock">gtk-new</property>
+                                <property name="stock">gtk-missing-image</property>
                               </widget>
                             </child>
                           </widget>
@@ -1196,7 +1196,7 @@ Eg. value = 2, means person does twice force at half speed.</property>
                               <widget class="GtkImage" id="image_export">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
-                                <property name="stock">gtk-convert</property>
+                                <property name="stock">gtk-missing-image</property>
                               </widget>
                             </child>
                           </widget>
@@ -1312,6 +1312,7 @@ Eg. value = 2, means person does twice force at half speed.</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">True</property>
+                                <property name="tooltip" translatable="yes">Delete</property>
                                 <signal name="clicked" handler="on_button_delete_clicked" swapped="no"/>
                                 <child>
                                   <widget class="GtkImage" id="image_delete">
@@ -1334,6 +1335,7 @@ Eg. value = 2, means person does twice force at half speed.</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">True</property>
+                                <property name="tooltip" translatable="yes">New</property>
                                 <signal name="clicked" handler="on_button_new_clicked" swapped="no"/>
                                 <child>
                                   <widget class="GtkImage" id="image_new">
